# peoples-court

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: Caddyfile  Dockerfile  docker-compose.yml  main.py
backend/api/: README.md
backend/src/peoples_court/: adjudicator.py  cli.py  config.py  db.py  models.py
data_processing/: 01_ingest.py  02_label.py  03_embed.py  04_benchmark.py  05_generate_training_data.py  06_train.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/adjudicate/: route.ts
frontend/src/components/: Footer.tsx  GrievanceForm.tsx  Header.tsx  PrecedentCard.tsx  PrecedentModal.tsx  SuggestedPrompts.tsx  VerdictDisplay.tsx
frontend/src/data/: suggested-prompts.json
frontend/src/hooks/: use-adjudicate.ts
infra/vps/: docker-compose.yml
